--- a/widgetgen.qrc
+++ b/widgetgen.qrc
@@ -1,14 +1,21 @@
 <RCC>
     <qresource prefix="/widgets">
         <file>images/feeds_layout.jpg</file>
-        <file>images/text_layout_3.jpg</file>
+        <file>images/graphicscarousel_layout.jpg</file>
+        <file>images/graphicsgrid_layout.jpg</file>
+        <file>images/graphicsgridtext_layout.jpg</file>
+        <file>images/graphicsiconstext_layout_1.jpg</file>
+        <file>images/graphicsiconstext_layout_2.jpg</file>
+        <file>images/graphicsiconstext_layout_3.jpg</file>
+        <file>images/graphicstext_layout_1.jpg</file>
+        <file>images/graphicstext_layout_2.jpg</file>
+        <file>images/graphicstext_layout_3.jpg</file>
         <file>images/iconstext_layout_1.jpg</file>
         <file>images/iconstext_layout_2.jpg</file>
         <file>images/iconstext_layout_3.jpg</file>
         <file>images/text_layout_1.jpg</file>
         <file>images/text_layout_2.jpg</file>
-        <file>images/graphictext_layout_1.jpg</file>
-        <file>images/graphictext_layout_2.jpg</file>
-        <file>images/graphictext_layout_3.jpg</file>
+        <file>images/text_layout_3.jpg</file>
+        <file>images/wideimage_layout.jpg</file>
     </qresource>
 </RCC>
